<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="mr.fugugames.com.transformers.createTransformers.CreateTransformerViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
        android:id="@+id/create_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/create"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/create_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@={viewModel.name}"
                    app:layout_constraintBaseline_toBaselineOf="@+id/name_lbl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/name_lbl" />

                <EditText
                    android:id="@+id/strength"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={viewModel.strength}"
                    android:textAlignment="center"
                    app:layout_constraintBaseline_toBaselineOf="@+id/strength_lbl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Endurance_lbl" />

                <EditText
                    android:id="@+id/intelligence"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={viewModel.intelligence}"
                    android:textAlignment="center"
                    app:layout_constraintBaseline_toBaselineOf="@+id/Intelligence_lbl"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toEndOf="@+id/Intelligence_lbl" />

                <EditText
                    android:id="@+id/speed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={viewModel.speed}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toEndOf="@+id/Intelligence_lbl"
                    app:layout_constraintTop_toBottomOf="@+id/intelligence" />

                <EditText
                    android:id="@+id/endurance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={viewModel.endurance}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Endurance_lbl"
                    app:layout_constraintTop_toBottomOf="@+id/strength" />

                <EditText
                    android:id="@+id/rank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={viewModel.rank}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Endurance_lbl"
                    app:layout_constraintTop_toBottomOf="@+id/endurance" />

                <EditText
                    android:id="@+id/courage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={viewModel.courage}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toEndOf="@+id/Intelligence_lbl"
                    app:layout_constraintTop_toBottomOf="@+id/speed" />

                <EditText
                    android:id="@+id/firepower"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={viewModel.firepower}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/Endurance_lbl"
                    app:layout_constraintTop_toBottomOf="@+id/rank" />

                <EditText
                    android:id="@+id/skill"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={viewModel.skill}"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toEndOf="@+id/Intelligence_lbl"
                    app:layout_constraintTop_toBottomOf="@+id/courage" />

                <ImageView
                    android:id="@+id/team_img"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:src="@drawable/ic_swords"
                    app:layout_constraintBottom_toTopOf="@+id/guideline2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="100dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />


                <TextView
                    android:id="@+id/Intelligence_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/intelligence"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

                <TextView
                    android:id="@+id/strength_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/strength"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="@+id/guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

                <TextView
                    android:id="@+id/Speed_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/speed"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBaseline_toBaselineOf="@+id/speed"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/Courage_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/courage"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBaseline_toBaselineOf="@+id/courage"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/Skill_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/skill"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBaseline_toBaselineOf="@+id/skill"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/Endurance_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/endurance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBaseline_toBaselineOf="@+id/endurance"
                    app:layout_constraintStart_toStartOf="@+id/guideline3" />

                <TextView
                    android:id="@+id/Rank_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/rank"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBaseline_toBaselineOf="@+id/rank"
                    app:layout_constraintStart_toStartOf="@+id/guideline3" />

                <TextView
                    android:id="@+id/Firepower_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/firepower"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintBaseline_toBaselineOf="@+id/firepower"
                    app:layout_constraintStart_toStartOf="@+id/guideline3" />

                <TextView
                    android:id="@+id/name_lbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/team_button_group" />

                <RadioGroup
                    android:id="@+id/team_button_group"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guideline2">

                    <RadioButton
                        android:id="@+id/decepticon_rad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left|center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/decepticon" />

                    <RadioButton
                        android:id="@+id/autobot_rad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/autobot"
                        app:layout_constraintEnd_toStartOf="@+id/guideline3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/guideline2" />

                </RadioGroup>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout >